# hw04-Group20

./: .buildinfo  LOSC_Event_tutorial-Copy1.ipynb  LOSC_Event_tutorial.html  Makefile  README.html  _config.yml  _toc.yml  conf.py  contribution_statement.html  genindex.html  hw04_description.html  hw04_description.md  notebooks.html  objects.inv  search.html  searchindex.js  setup.cfg
.doctrees/: LOSC_Event_tutorial.doctree  contribution_statement.doctree  hw04_description.doctree
.doctrees/mybook/: markdown.doctree
.github/workflows/: book.yml
.ipynb_checkpoints/: LOSC_Event_tutorial-checkpoint.ipynb
.pytest_cache/: README.html
_build/.doctrees/: LOSC_Event_tutorial.doctree  contribution_statement.doctree  environment.pickle  hw04_description.doctree  intro.doctree  markdown.doctree  notebooks.doctree
_build/.doctrees/mybook/: markdown-notebooks.doctree  notebooks.doctree
_build/html/: .buildinfo  LOSC_Event_tutorial.html  contribution_statement.html  genindex.html  hw04_description.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: LOSC_Event_tutorial.doctree  environment.pickle  hw04_description.doctree
_build/html/.pytest_cache/: README.html
_build/html/mybook/: notebooks.html
_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
_build/jupyter_execute/mybook/: markdown-notebooks.ipynb  notebooks.ipynb
_sources/: README.md  contribution_statement.md
ligotools/: __init__.py  utils.py
ligotools/tests/: __init__.py  test_readligo.py  test_utils.py
mybook/: intro.html  markdown-notebooks.html  markdown.html
(+3 files in other folders)
